# haxkell

./: .gitignore  .gitmodules  Makefile  README.md  README.org  clojure-list.cabal  polyglot.cabal  web-server.cabal
Data/: Iff.hs
clojure-list/: Data-List-Clojure-Generic.html  Data-List-Clojure.html  doc-index.html  index-frames.html  index.html  mini_Data-List-Clojure-Generic.html  mini_Data-List-Clojure.html
src/: Main.hs
src/Data/List/: Clojure.hs
src/Data/List/Clojure/: Generic.hs
